--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="mb-4">Registration Form</h1>
+        <h1 style="color:green" class="mb-4">Registration Form</h1>
         <form>
             <div class="form-group">
                 <label for="name">Name:</label>
